--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.7.0",
     "twitter-api-v2": "^1.16.1"
   }
 }
