--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "automate-twitter-posts-with-ai",
+  "name": "donkee-x",
   "version": "1.0.0",
   "description": "Automates Twitter posts using AI",
   "main": "src/index.js",
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "express": "^4.17.1",
     "express-rate-limit": "^6.7.0",
-    "twitter-api-v2": "^1.16.1"
+    "twitter-api-v2": "^1.16.1",
+    "mongodb": "^4.1.0"
   }
 }
